[gd_scene load_steps=6 format=3 uid="uid://cx3pnv3a8td7f"]

[ext_resource type="Script" uid="uid://b0g8wtar8xbcn" path="res://items/weapons/_generics/weapon.gd" id="1_0qsk2"]
[ext_resource type="Resource" uid="uid://cl47d1oinolex" path="res://items/weapons/bubble_bullet/bubble_bullet_projectile_stats.tres" id="2_bbq2t"]
[ext_resource type="Script" uid="uid://5nf8qiekyyrw" path="res://systems/components/targeting_component.gd" id="3_2u8cg"]
[ext_resource type="PackedScene" uid="uid://bi2e3pkfcknbt" path="res://systems/components/weapon_stats_component.tscn" id="4_pjwm3"]
[ext_resource type="PackedScene" uid="uid://c5vl748oixb2p" path="res://systems/components/fire_behavior_component.tscn" id="5_rvgq7"]

[node name="BubbleBulletWeapon" type="Node2D"]
script = ExtResource("1_0qsk2")
projectile_stats = ExtResource("2_bbq2t")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TargetingComponent" type="Node" parent="."]
script = ExtResource("3_2u8cg")
metadata/_custom_type_script = "uid://5nf8qiekyyrw"

[node name="WeaponStatsComponent" parent="." instance=ExtResource("4_pjwm3")]

[node name="FireBehaviorComponent" parent="." instance=ExtResource("5_rvgq7")]

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
